Opened 10 years ago
Closed 10 years ago
#7687 closed bug (fixed)
Serious boot performance regression on 42167
Reported by: | stargatefan | Owned by: | kallisti5 |
---|---|---|---|
Priority: | high | Milestone: | R1 |
Component: | Drivers/USB | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Some change in between 41894 and 42167 is cuasing a serious boot time regression when the system detects a USB hub style card reader. syslog attached.
It was during these events using the onscreen debugger that I was able to see where it was slowing down at.
KERN: usb_disk: device reports a lun count of 1 KERN: usb_disk: vendor_identification "Lexar " KERN: usb_disk: product_identification "JD FireFly " KERN: usb_disk: product_revision_level "1100" KERN: usb_disk: device reports a lun count of 4 KERN: usb_disk: vendor_identification "Generic " KERN: usb_disk: product_identification "USB SD Reader " KERN: usb_disk: product_revision_level "1.00" KERN: usb_disk: vendor_identification "Generic " KERN: usb_disk: product_identification "USB CF Reader " KERN: usb_disk: product_revision_level "1.01" KERN: usb_disk: vendor_identification "Generic " KERN: usb_disk: product_identification "USB SM Reader " KERN: usb_disk: product_revision_level "1.02" KERN: usb_disk: vendor_identification "Generic " KERN: usb_disk: product_identification "USB MS Reader " KERN: usb_disk: product_revision_level "1.03"
Attachments (1)
Change History (11)
by , 10 years ago
comment:1 by , 10 years ago
Component: | - General → Drivers/USB |
---|---|
Owner: | changed from | to
comment:2 by , 10 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:3 by , 10 years ago
it took around 10 seconds per line so total boot time bumped to well over 2 minutes, then once it cleared the last line it booted in like 4 seconds. it is a consistent behavior. Sorry for tagging you with the ticket,
follow-up: 8 comment:4 by , 10 years ago
Priority: | normal → high |
---|
This is most likely due to the fact that since the card slots are empty, we wait the full 23 second timeout for *each* card slot.
This is a pretty big regression I didn't plan on.
Going to disable my invalid lun delay as empty usb memory sticks are more common then usb cd-roms.
comment:7 by , 10 years ago
check hrev42186 and see if it fixes it for you. Wasn't properly handling the NO_MEDIA event. (I hope these card reader lun's give that back when the slot is empty)
comment:8 by , 10 years ago
Replying to kallisti5:
This is most likely due to the fact that since the card slots are empty, we wait the full 23 second timeout for *each* card slot.
This is a pretty big regression I didn't plan on.
Going to disable my invalid lun delay as empty usb memory sticks are more common then usb cd-roms.
At first I thought the build was broke so I did a clean build with jam clean and jam -a to rebuild all targets, after that I started investigating. I will retest with your changes tonight and report back. Maybe it did take more then 10 seconds per slot. at least I know I am not crazy but this card reader has like 6 slots. thats alot of boot slow down for a OS that normally boots faster then I can open a beer !
That'd most probably be hrev42058.