small logic fix on my part, not properly handling usb drives with empty media. Potential fix to #7687

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@42186 a95241bf-73f2-0310-859d-f6bbb57e9c96